feat: 预发布测试
更新预发布版本号为1.0.0.8

Log:
Change-Id: Ice993d232451069d2e60a3955d4ef83370af4a57

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-deepinid-plugin (1.0.0.8) UNRELEASED; urgency=medium
+
+  * update changelog
+
+ -- duanhongyu <duanhongyu@uniontech.com>  Aug, 17 Jun 2022 9:17:17 +0800
+
 deepin-deepinid-plugin (1.0.0.7) UNRELEASED; urgency=medium
 
   * update changelog
