--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+deepin-deepinid-plugin (2.0.2) unstable; urgency=medium
+
+  * update description
+  * update translations
+  * fix when changing name notify twice
+
+ -- chenhongtao <chenhongtao@deepin.org>  Wed, 06 Sep 2023 14:23:50 +0800
+
 deepin-deepinid-plugin (2.0.1) unstable; urgency=medium
 
   * code tidyup
