--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+deepin-deepinid-plugin (2.0.6) unstable; urgency=medium
+
+  * chore: bump version
+
+ -- Chang Yang <yangchang@deepin.org>  Fri, 19 Apr 2024 13:18:44 +0800
+
 deepin-deepinid-plugin (2.0.5) unstable; urgency=medium
 
   * fix: cache file placed in wrong place
